<resources>
    <string name="app_name">App.main</string>
    <string name="add_friends">添加好友</string>
    <string name="friends_list">好友列表</string>
    <string name="new_friend_request">新好友请求</string>
    <string name="request_accept">接受</string>
    <string name="request_decline">拒绝</string>
    <string name="my_friend">我的好友</string>
    <string name="click_to_find_more_interesting_things">点击发现更多有趣玩法</string>
    <string name="heart_rate">心率</string>
    <string name="blood_pressure">血压</string>
    <string name="blood_oxygen">血氧</string>
    <string name="show">显示</string>
    <string name="activity_status">状态</string>
    <string name="activity_sports">运动</string>
    <string name="activity_find">发现</string>
    <string name="activity_mine">我的</string>
    <string name="title_activity_settings">Settings</string>
    <string name="step_count">步数</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="heart_beat_times">/次</string>
    <string name="history_data">历史数据</string>
    <string name="exit_login">退出登录</string>
    <string name="delete_all_user_data">删除所有本地数据</string>
    <string name="check_update">检查更新</string>
    <string name="return_voices">意见反馈</string>
    <string name="about">关于</string>
    <string name="give_u_future_u_could_see">给你一个看的见の未来</string>
    <string name="choicest">每日精选</string>
    <string name="interesting_things">干货</string>
    <string name="others">其他</string>
    <string name="related_news">相关资讯</string>
    <string name="first_aid">急救知识</string>
    <string name="choicest_head">精选</string>
    <string name="go_into">点击查看</string>
    <string name="related_info">HealthyMain （本软件）是由种菜的小朋友独立开发完成，所有解释权归种菜的小朋友所有。
                                本软件不可由除种菜的小朋友外的其他人用作商用，一经发现，将追究相关开发者和公司的法律
                                责任。
                                如有相关广告合作，请联系 潘云逸 17888823635 cufer@foxmail.com
    </string>
    <string name="seriously_informed">郑重声明</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beat_healthy_degree">心率健康指数</string>
    <string name="step_healthy_degree">运动健康指数</string>
    <string name="general_healthy_degree">综合健康指数</string>
</resources>
